Update index.html and added linkedIn profile link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span><p>Connect With Me</p></span>
         </div >
             <div class="social-link">
-                <a href=""><img src="linkedin.svg" alt="triangle with all three sides equal" height="57" width="70" /></a>
+                <a href=""><img src="linkedin.svg" href="https://www.linkedin.com/in/muhammad-hadiuzzaman-zafri-35074b252/" alt="triangle with all three sides equal" height="57" width="70" /></a>
                 <a href=""><img src="x-twitter.svg" alt="triangle with all three sides equal" height="57" width="70" /></a>
                 <a href=""><img src="youtube.svg" alt="square-facebook icon" height="57" width="70"/></a>
                 <a href=""><img src="square-facebook.svg" alt="square-facebook icon" height="57" width="70"/></a>
